classDiagram
    %% What You Missed Preview (US2) - Full-Stack Class Diagram

    class WhatYouMissed {
        +Message[] unreadMessages
        +Function onDismiss
        +Function onJumpToUnread
        +String channelId
        +String dmId
        +Boolean isExpanded
        +String previewText
        +toggleExpand()
        +dismiss()
    }

    class AppContext {
        +Message[] messages
        +User[] users
        +Object lastReadMessages
        +getUnreadMessages(channelId, dmId) Message[]
        +getUnreadCount(channelId, dmId) Number
        +markChannelAsRead(channelId)
    }

    class apiService {
        +getPreview(channelId, dmId, since) Promise~PreviewData~
    }

    class SummaryService {
        +generatePreview(options) Promise~PreviewData~
        -_fetchMessages(options) Promise~FetchResult~
    }

    class SummarizationProvider {
        +preview(messages, authorMap) Promise~string~
        -_topAuthors(messages, authorMap) string[]
    }

    class Message {
        +String id
        +String content
        +String author_id
        +Timestamp timestamp
    }

    class User {
        +String id
        +String username
        +String display_name
    }

    %% Frontend relationships
    WhatYouMissed --> AppContext : reads unread messages
    AppContext --> Message : manages
    AppContext --> User : manages

    %% API boundary
    WhatYouMissed ..> apiService : fetches preview
    apiService ..> SummaryService : HTTP GET

    %% Backend relationships
    SummaryService --> SummarizationProvider : delegates
    SummaryService ..> Message : queries PostgreSQL
    Message --> User : author_id FK
